--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
   <title>Shift to Question</title>
 
   <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+  <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/assets/img/favicon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
+<link rel="manifest" href="/assets/img/favicon/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
@@ -11,7 +28,7 @@
   <form id="appSearch" accept-charset="utf-8">
     <label for="keyword">
       <blockquote>That is precisely why the
-        <input type="text" name="keyword" placeholder="" autocomplete="off">
+        <input type="text" name="keyword" id="typed" placeholder="" autocomplete="off">
       problem is so tenacious in American life, and so dangerous.</blockquote>
     </label>
 <!--     <p>– James Baldwin</p> -->
@@ -51,7 +68,9 @@
 
 <script type="text/javascript" src="/assets/js/libs/jquery.min.js"></script>
 <script type="text/javascript" src="/assets/js/libs/interact.min.js"></script>
+<script type="text/javascript" src="/assets/js/libs/typed.js-master/lib/typed.js"></script>
 <script type="text/javascript" src="/assets/js/main.js"></script>
+
 
 </body>
 </html>
