--- a/index.html
+++ b/index.html
@@ -60,15 +60,13 @@
 
     <h4 class="info-text">
       Social structuralism is the idea that people operate within systems which have been established for them. People interact with the world based on their personal understanding and experience. It takes a conscious effort to remove oneself from their immediate realm of understanding to see the greater context. Nobody ever questions these structures unless there is a great shift that forces it to be acknowledged.<br><br>The critique that humans are not intelligible except through their immediate interrelations is a harsh truth to bear. These relations constitute a structure that remain constant in abstract culture. Nobody ever wants to admit they’re wrong and everybody wants to have an opinion. More often than not, our perspectives are shaped by what we’ve been taught, whether through our personal experiences or repeated patterns of behavior.<br><br>One can gain a greater understanding of how structures are formed in the larger context by analyzing how people assign, convey and process meaning. Factors such as social class, religion, and politics become lenses through which to view the world and the people within it. Through a two-part experience, Shift to Question features a book and web-based interactive which reveals an  analysis of social structures by juxtaposing it with current issues.
-
-      <!-- It would seem, unless one looks more deeply at the phenomenon, that most people are able to dilute themselves and get through their lives quite happily. But I still believe that the unexamined life is not worth living: and I know that self-delusion, in the service of no matter what small or lofty cause, is a price no [person] can afford. His subject is himself and the world and it requires every ounce of stamina he can summon to attempt to look on himself and the world as they are. <span style="color: #c5cfd4">&#8212; James Baldwin, <i>Nobody Knows My Name</i> -->
     </h4>
   </div>
 </div>
 
 <script type="text/javascript" src="/assets/js/libs/jquery.min.js"></script>
 <script type="text/javascript" src="/assets/js/libs/interact.min.js"></script>
-<script type="text/javascript" src="/assets/js/libs/typed.js-master/lib/typed.js"></script>
+<script type="text/javascript" src="/assets/js/libs/typed.js-master/lib/typed.min.js"></script>
 <script type="text/javascript" src="/assets/js/main.js"></script>
 
 
