--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <script type="text/javascript" src="/assets/js/libs/jquery.min.js"></script>
 <script type="text/javascript" src="/assets/js/libs/interact.min.js"></script>
-<script type="text/javascript" src="/assets/js/libs/typed.js-master/lib/typed.min.js"></script>
+<script type="text/javascript" src="/assets/js/libs/typed.js-master/lib/typed.js"></script>
 <script type="text/javascript" src="/assets/js/main.js"></script>
 
 
