made that js work praise the lord

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <li class="submitComment introComment visible draggable">
       <form id="submission" accept-charset="utf-8">
         <label>
-          <input type="input" id="writecomment" name="submission" placeholder="What do you have to say?" autocomplete="off"></input>
-          <input type="submit" value="Submit" name="submit" class="submit" id="submit" />
+          <input type="input" id="writecomment" name="submission" placeholder="Leave a comment" autocomplete="off"></input>
+          <input type="submit" value="Submit" name="submit" class="submit" id="submit"/>
         </label>
       </form>
     </li>
